# neuro

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
backend/: inference.py  main.py  mesh_utils.py  pyproject.toml  requirements.txt
src/: App.jsx  index.css
src/components/: ChatPanel.jsx  DoctorNavbar.jsx  FeatureCard.jsx  Navbar.jsx  PatientExplanation.jsx  PatientNavbar.jsx  SummaryPanel.jsx  UploadPanel.jsx  ViewerPanel.jsx
src/pages/: Doctor.jsx  Landing.jsx  Patient.jsx
