[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pydicom>=3.0.2",
    "python-multipart>=0.0.24",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "tensorflow>=2.21.0",
    "uvicorn>=0.44.0",
]
